<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GreatScott</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="billTotal">Bill Total</string>
    <string name="zeroDotZero">0.00</string>
    <string name="tenPercent">10%</string>
    <string name="fifteenPercent">15%</string>
    <string name="twentyPercent">20%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="custom">Custom</string>
    <string name="customPercent">0%</string>

</resources>
